--- a/public/style.css
+++ b/public/style.css
@@ -6,8 +6,13 @@
   --font: "Poppins", sans-serif;
   --font-light: 400;
   --font-heavy: 600;
+  --btn-radius: 5px;
+  --cubic-transition: 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  --shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  --shadow-heavy: 0 14px 28px rgba(0, 0, 0, 0.25),
+    0 10px 10px rgba(0, 0, 0, 0.22);
 }
-
+/* || GENERAL STYLES */
 body {
   margin: 0;
   box-sizing: border-box;
@@ -32,22 +37,22 @@ h1 {
   margin: 2% 5% 3%;
 }
 
-/*  --- BUTTON SYLING --- */
+/* || BUTTON SYLING */
 
 .btn {
   background-color: var(--bg-highlight);
-  border: none;
-  border-radius: 5px;
+  border: 2px solid var(--bg-highlight);
+  border-radius: var(--btn-radius);
   margin-bottom: 0;
   text-transform: uppercase;
   font-weight: 600;
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all var(--cubic-transition);
 }
 @media (hover: hover) {
   .btn:hover {
     background-color: var(--bg-card);
     border: 2px solid var(--bg-highlight);
-    border-radius: 5px;
+    border-radius: var(--btn-radius);
     margin-bottom: 0;
     text-transform: uppercase;
     font-weight: 600;
@@ -58,6 +63,24 @@ h1 {
 
 .btn-cart {
   padding: 2% 5%;
+}
+
+.btns-container {
+  grid-column: span 2;
+  display: flex;
+  /* justify-content: space-evenly; */
+  align-items: center;
+}
+.btn-pop-up {
+  padding: 10% 12%;
+  width: 100px;
+}
+.btn-pop-up:last-child {
+  margin-left: 8px;
+}
+
+.btn-addToCart {
+  padding: 5% 3%;
 }
 header {
   margin-bottom: 5%;
@@ -79,7 +102,7 @@ nav {
   border-radius: 10px;
   width: 88%;
   padding: 2% 3%;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: var(--shadow);
 }
 
 .events-container {
@@ -97,8 +120,8 @@ nav {
   border-radius: 15px;
   margin: 0 3% 5%;
   background-color: var(--bg-card);
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  box-shadow: var(--shadow);
+  transition: all var(--cubic-transition);
 }
 
 .card:hover {
@@ -159,17 +182,13 @@ nav {
 .card-price {
   background-color: var(--bg-highlight);
   padding: 2% 3%;
-  border-radius: 5px;
+  border-radius: var(--btn-radius);
   margin: 0;
 }
 
 .card-date {
   padding-top: 3%;
   margin: 0;
-}
-
-.btn-addToCart {
-  padding: 5% 3%;
 }
 
 main {
@@ -219,23 +238,14 @@ main {
     font-size: 1.5em;
   }
 }
-.btns-container {
-  grid-column: span 2;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-.btn-cancel,
-.btn-buy {
-  padding: 3%;
-  width: 100px;
-}
 
-.hidden {
-  display: none;
-}
 footer {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 20px;
+}
+
+/* || UTILITIES */
+.hidden {
+  display: none;
 }
